[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["zdebra <zd.brabec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name= "day01"
test = false
bench = false
path="day01/src/main.rs"

[[bin]]
name= "day02"
test = false
bench = false
path="day02/src/main.rs"

[[bin]]
name= "day03"
test = false
bench = false
path="day03/src/main.rs"

[[bin]]
name= "day04"
test = false
bench = false
path="day04/src/main.rs"

[[bin]]
name= "day05"
test = false
bench = false
path="day05/src/main.rs"

[[bin]]
name= "day06"
test = false
bench = false
path="day06/src/main.rs"

[[bin]]
name= "day07"
test = false
bench = false
path="day07/src/main.rs"

[[bin]]
name= "day08"
test = false
bench = false
path="day08/src/main.rs"

[[bin]]
name= "day09"
test = false
bench = false
path="day09/src/main.rs"

[[bin]]
name= "day10"
test = false
bench = false
path="day10/src/main.rs"

[workspace]

members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
]

[dependencies]

array2d = "0.2.1"
simple-error = "0.1.9"
regex = "1.1.0"
